--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -27,10 +27,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: ls
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: intall gcc dependencies
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt update
+          sudo apt install build-essential
+      - name: compile hello world
+        run: gcc Source.cpp -o main
+      - name: run Hello world
+        run: ./main
