--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -34,7 +34,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install build-essential
+          sudo apt-get install g++-multilib
       - name: compile hello world
-        run: gcc Source.cpp -o main
+        run: g++ Source.cpp -o main
       - name: run Hello world
         run: ./main
